--- a/src/take_home_node/package.xml
+++ b/src/take_home_node/package.xml
@@ -16,6 +16,7 @@
   <depend>std_msgs</depend>
   <depend>uva_iac_msgs</depend>
   <depend>raptor_dbw_msgs</depend>
+  <depend>novatel_oem7_msgs</depend>
   <depend>deep_orange_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
